GNOME Bugzilla – Bug 737727
should not enclose dhcp-client-identifier in double quotes
Last modified: 2014-10-27 15:50:47 UTC
the latest version breaks the use of dhcp-client-identifier by generating a dhclient.conf, in which the client identifier string is enclosed in double quotes. Since it is a hex string it should not be in quotes.
Just found out what is going on here: src/dhcp-manager/nm-dhcp-dhclient-utils.c tries to determine whether the dhcp-client-identifier is a hex string or not. The string I used was something like 1:0:ab:aa:ab which is a perfectly acceptable hex string for dhclient When I change this to 01:00:ab:aa:ab it works, there are no quotes in the generated dhclient.conf So maybe the test should be changed to accommodate such cases...
Created attachment 287964 [details] [review] dhclient: allow single hex digits in hexadecimal dhcp_client_id When checking whether the dhcp-client-identifier is a hex string, we expected pairs of hexadecimal digits separated by colon. Relax this check to also allow single hex digits. https://bugzilla.gnome.org/show_bug.cgi?id=737727 Signed-off-by: Thomas Haller <thaller@redhat.com>
Review of attachment 287964 [details] [review]: Looks good to me.
merged to master: http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=7afdd9c97960b532324c6a1208f09dea3ecb9219